Ensure top element is visible

--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ img {
 }
 
 .results {
-  padding-top: 8em;
+  padding-top: 10em;
 }
 
 .slider {
